--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.apollographql.apollo'
 }
 
 android {
@@ -32,6 +33,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+    apollo {
+        generateKotlinModels.set(true)
+    }
 }
 
 dependencies {
@@ -46,7 +50,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.preference:preference-ktx:1.2.0-alpha02'
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
-    testImplementation 'junit:junit:4.+'
+    implementation 'com.apollographql.apollo:apollo-runtime:2.5.9'
+    implementation 'com.apollographql.apollo:apollo-coroutines-support:2.5.9'
+
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
