--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     implementation 'com.apollographql.apollo:apollo-coroutines-support:2.5.9'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    implementation 'com.drakeet.about:about:2.5.0'
+    implementation 'com.drakeet.multitype:multitype:4.3.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
