--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,16 +42,29 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
+
     implementation 'com.google.android.material:material:1.4.0'
+
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+
     implementation 'androidx.preference:preference-ktx:1.2.0-beta01'
+
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
+
     implementation 'com.apollographql.apollo:apollo-runtime:2.5.9'
     implementation 'com.apollographql.apollo:apollo-coroutines-support:2.5.9'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // About Page
