fix: update apollo setup
FIXME: apollo cannot recognize graphql files

--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -31,6 +31,10 @@ android {
 
     apollo {
         generateKotlinModels.set(true)
+        service("schema") {
+            sourceFolder = "schema"
+            rootPackageName.set("top.learningman.hystime.sdk")
+        }
     }
 }
 
