--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
 
@@ -43,18 +42,17 @@ dependencies {
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
-
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.preference:preference-ktx:1.1.1'
-
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -64,4 +62,5 @@ dependencies {
     implementation 'com.drakeet.multitype:multitype:4.3.0'
 
     implementation 'io.github.ShawnLin013:number-picker:2.4.13'
+    implementation project(path: ':sdk')
 }
