feat: add refresh
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':sdk')
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
 
@@ -68,5 +70,5 @@ dependencies {
     implementation 'com.drakeet.multitype:multitype:4.3.0'
 
     implementation 'io.github.ShawnLin013:number-picker:2.4.13'
-    implementation project(path: ':sdk')
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
 }
