feat: working on button groups
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -40,6 +40,7 @@ android {
         graphqlSourceDirectorySet.exclude("**/*.graphqlconfig")
         graphqlSourceDirectorySet.exclude("**/*.json")
     }
+    namespace 'top.learningman.hystime.sdk'
 }
 
 dependencies {
