--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        resConfigs "zh", "en"
     }
 
     signingConfigs {
@@ -41,9 +43,15 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.debug
+
             minifyEnabled true
             shrinkResources true
             zipAlignEnabled true
+            debuggable false
+            jniDebuggable false
+            renderscriptDebuggable false
+            pseudoLocalesEnabled false
+
             resValue "string", "app_name", "Hystime"
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
