--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,23 +17,22 @@
         android:theme="@style/Theme.Hystime">
         <activity
             android:name=".ui.dashboard.DashboardActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.HystimeActionbar" />
+
         <activity
             android:name=".ui.timer.TimerFullScreenActivity"
             android:exported="false"
             android:launchMode="singleInstance" />
 
-        <service
-            android:name=".ui.timer.TimerService"
-            android:enabled="true"
-            android:exported="false" />
-
         <activity
             android:name=".ui.setting.SettingActivity"
             android:exported="false" />
+
         <activity
             android:name=".ui.setting.AboutActivity"
             android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -45,6 +44,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".ui.timer.TimerService"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
