fix: fix duplicate full screen timer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
 
         <activity
             android:name=".ui.timer.TimerFullScreenActivity"
-            android:exported="false"
-            android:launchMode="singleInstance" />
+            android:exported="false" />
 
         <activity
             android:name=".ui.setting.SettingActivity"
