--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,5 +107,8 @@ dependencies {
 
     implementation 'io.github.ShawnLin013:number-picker:2.4.13'
 
-//    implementation 'com.airbnb.android:paris:2.0.1'
+    def appCenterSdkVersion = '4.3.1'
+    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
+    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
+
 }
