feat: heatmap data fetch
[skip ci]

--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -38,7 +38,8 @@ android {
         generateKotlinModels = true
 
         customTypeMapping = [
-                "DateTime": "java.util.Date"
+                "DateTime": "java.util.Date",
+                "Date": "java.util.Date",
         ]
 
         graphqlSourceDirectorySet.srcDirs += 'src/main/java/top/learningman/hystime/sdk/graphql'
@@ -51,7 +52,7 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
