--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,13 +8,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Get current time
-        uses: 1466587594/get-current-time@v2
-        id: current-time
-        with:
-          format: YYYYMMDDTHHmmss
-          utcOffset: "+08:00"
-
       - uses: actions/checkout@v2
 
       - name: set up JDK 11
@@ -39,7 +32,7 @@ jobs:
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "${{ steps.current-time.outputs.formattedTime }}"
+          automatic_release_tag: latest
           prerelease: true
           files: |
             app/build/outputs/apk/release/*.apk
