dev: redesign timer
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,11 @@ dependencies {
 
     implementation 'io.github.ShawnLin013:number-picker:2.4.13'
 
+    def emoji2_version = "1.2.0-alpha01"
+    implementation("androidx.emoji2:emoji2:$emoji2_version")
+    implementation("androidx.emoji2:emoji2-views:$emoji2_version")
+    implementation("androidx.emoji2:emoji2-views-helper:$emoji2_version")
+
     def appCenterSdkVersion = '4.3.1'
     implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
     implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
