--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,24 +19,20 @@
             android:name=".ui.dashboard.DashboardActivity"
             android:exported="false"
             android:theme="@style/Theme.Hystime.Actionbar" />
-
         <activity
             android:name=".ui.timer.TimerFullScreenActivity"
             android:exported="false" />
-
         <activity
             android:name=".ui.setting.SettingActivity"
             android:exported="false" />
-
         <activity
             android:name=".ui.setting.AboutActivity"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustNothing"
-            android:theme="@style/Theme.Hystime.Starting">
+            android:theme="@style/Theme.Hystime.Starting"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
